# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-diagnostics"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Host observability substrate for jackin: structured run diagnostics, debug-mode flag, and terminal-ownership guards."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_diagnostics"
path = "src/lib.rs"

[features]
default = []
test-support = ["opentelemetry_sdk/testing"]

[dependencies]
jackin-core = { workspace = true }
jackin-telemetry = { path = "../jackin-telemetry" }
jackin-tui = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
# Inlined from `jackin_core::ansi_text` (A3) and `jackin_core::prune_output`
# (A3) so this crate (L1, depended on by 8 L0/L1/L2 crates) does not need
# to pull `jackin-tui` (L3) for the two small helpers `prune_all_runs` uses.
anstyle-parse = { workspace = true }
owo-colors = { workspace = true, features = ["supports-colors"] }
# OTLP/gRPC is a baseline runtime capability. Provider construction remains
# runtime-gated by standard OTEL environment configuration.
opentelemetry = { workspace = true }
# gRPC/tonic is the ONLY transport. It is the reference backend's (Parallax)
# default and what `parallax run` injects (`OTEL_EXPORTER_OTLP_ENDPOINT` ->
# :4317, `OTEL_EXPORTER_OTLP_PROTOCOL=grpc`). One transport keeps the export
# path single and matches the highest-throughput OTLP wire protocol (protobuf
# over multiplexed HTTP/2). A non-grpc `OTEL_EXPORTER_OTLP_PROTOCOL` is rejected
# loudly rather than mis-sent (see `ensure_grpc_protocol`).
opentelemetry-otlp = { workspace = true }
# gRPC/tonic export is async and cannot run on the stable dedicated-thread batch
# processors (they `block_on` the export off any reactor -> panic). It needs the
# async-runtime processors driven by a tokio runtime. jackin❯'s host and capsule
# both use a *current-thread* tokio main, where neither off-the-shelf runtime
# fits: plain `rt-tokio` spawns the worker on the app runtime and the
# `futures_executor::block_on` flush then parks the only thread -> deadlock;
# `rt-tokio-current-thread`'s isolated per-spawn runtime cannot drive tonic's h2
# connection -> the export hangs. So jackin owns a dedicated *multi-thread*
# runtime for telemetry and builds the providers inside its `enter()` guard with
# the `rt-tokio` (`Tokio`) runtime — see `observability::otlp::otel_runtime`.
opentelemetry_sdk = { workspace = true, features = [
    "metrics",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
# Process metrics (CPU, memory) for the OTLP gauge callbacks.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
# `rt-multi-thread` powers the dedicated telemetry runtime (see
# `observability::otlp::otel_runtime`); `Handle::metrics()` feeds the tokio
# runtime gauges from the app's handle, captured at subscriber init.
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
opentelemetry_sdk = { workspace = true, features = ["testing", "trace", "logs", "metrics"] }
tempfile = { workspace = true }

[[bench]]
name = "summarize_jsonl"
harness = false

[lints]
workspace = true
