# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-diagnostics"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Host observability substrate for jackin: structured run diagnostics, debug-mode flag, and terminal-ownership guards."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_diagnostics"
path = "src/lib.rs"

[features]
default = []
test-support = ["opentelemetry_sdk/testing"]

[dependencies]
crossterm = { workspace = true }
jackin-core = { workspace = true }
jackin-telemetry = { workspace = true }
hyper-util = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
# OTLP/gRPC is a baseline runtime capability. Provider construction remains
# runtime-gated by standard OTEL environment configuration.
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true, features = ["semconv_experimental"] }
# gRPC/tonic is the ONLY transport. It is the reference backend's (Parallax)
# default and what `parallax run` injects (`OTEL_EXPORTER_OTLP_ENDPOINT` ->
# :4317, `OTEL_EXPORTER_OTLP_PROTOCOL=grpc`). One transport keeps the export
# path single and matches the highest-throughput OTLP wire protocol (protobuf
# over multiplexed HTTP/2). A non-grpc `OTEL_EXPORTER_OTLP_PROTOCOL` is rejected
# loudly rather than mis-sent (see `ensure_grpc_protocol`).
opentelemetry-otlp = { workspace = true }
# gRPC/tonic export is async and cannot run on the stable dedicated-thread batch
# processors (they `block_on` the export off any reactor -> panic). It needs the
# async-runtime processors driven by a tokio runtime. jackin❯'s host and capsule
# both use a *current-thread* tokio main, where neither off-the-shelf runtime
# fits: plain `rt-tokio` spawns the worker on the app runtime and the
# `futures_executor::block_on` flush then parks the only thread -> deadlock;
# `rt-tokio-current-thread`'s isolated per-spawn runtime cannot drive tonic's h2
# connection -> the export hangs. So jackin owns a dedicated *multi-thread*
# runtime for telemetry and builds the providers inside its `enter()` guard with
# the `rt-tokio` (`Tokio`) runtime — see `observability::otlp::otel_runtime`.
opentelemetry_sdk = { workspace = true, features = [
    "metrics",
    "rt-tokio",
    "experimental_trace_batch_span_processor_with_async_runtime",
    "experimental_logs_batch_log_processor_with_async_runtime",
    "experimental_metrics_periodicreader_with_async_runtime",
] }
opentelemetry-appender-tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
# Process metrics (CPU, memory) for the OTLP gauge callbacks.
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
rustls = { workspace = true, features = ["ring", "std"] }
rustls-native-certs = { workspace = true }
rustls-pki-types = { workspace = true }
# `rt-multi-thread` powers the dedicated telemetry runtime (see
# `observability::otlp::otel_runtime`); `Handle::metrics()` feeds the tokio
# runtime gauges from the app's handle, captured at subscriber init.
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
url = { workspace = true }

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
jackin-otlp-testbed = { workspace = true }
opentelemetry-proto = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["testing", "trace", "logs", "metrics"] }
rcgen = { workspace = true }
tempfile = { workspace = true }

[[test]]
name = "wire_conformance"
required-features = ["test-support"]

[[test]]
name = "wire_conformance_daemon"
required-features = ["test-support"]

[[test]]
name = "wire_conformance_capsule"
required-features = ["test-support"]

[[test]]
name = "wire_failure_partial_success"
required-features = ["test-support"]

[[test]]
name = "wire_failure_non_retryable"
required-features = ["test-support"]

[[test]]
name = "wire_failure_retryable"
required-features = ["test-support"]

[[test]]
name = "wire_failure_endpoint_loss"
required-features = ["test-support"]

[[test]]
name = "wire_shutdown"
required-features = ["test-support"]

[[test]]
name = "wire_failure_subscriber"
required-features = ["test-support"]

[[test]]
name = "wire_failure_tls"
required-features = ["test-support"]

[[test]]
name = "wire_disabled"
required-features = ["test-support"]

[[test]]
name = "wire_failure_slow"
required-features = ["test-support"]

[[test]]
name = "wire_reentry"
required-features = ["test-support"]

[[test]]
name = "wire_propagation"
required-features = ["test-support"]

[[test]]
name = "wire_sessions"
required-features = ["test-support"]

[[test]]
name = "wire_registry_events"
required-features = ["test-support"]

[[test]]
name = "soak"
required-features = ["test-support"]

[lints]
workspace = true
