# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-docker"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Concrete Docker daemon and shell-runner implementations for jackin."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_docker"
path = "src/lib.rs"

[dependencies]
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
bollard = { version = "0.21", features = ["aws-lc-rs"] }
tokio = { version = "1", features = ["rt", "process", "io-util", "sync", "macros", "time", "fs"] }
futures-util = "0.3"
reqwest = { version = "0.13", default-features = false }
fast-down = { version = "5.0", features = ["fast-puller", "file", "reqwest-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[build-dependencies]
jackin-build-meta = { version = "0.6.0-dev", path = "../jackin-build-meta" }

[dev-dependencies]
tempfile = "=3.27.0"

[lints]
workspace = true
