# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-docker"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Concrete Docker daemon and shell-runner implementations for jackin."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_docker"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
jackin-diagnostics = { workspace = true }
bollard = { version = "0.21", features = ["aws-lc-rs"] }
tokio = { workspace = true, features = ["rt", "process", "io-util", "sync", "macros", "time", "fs"] }
futures-util = { workspace = true }
reqwest = { workspace = true }
fast-down = { workspace = true, features = ["fast-puller", "file", "reqwest-tls"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[build-dependencies]
jackin-build-meta = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
