[package]
name = "jackin-env"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Operator-env resolution: op:// references, $VAR expansion, and 1Password CLI integration. Future home of operator_env/."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_env"
path = "src/lib.rs"

[dependencies]
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-config = { version = "0.6.0-dev", path = "../jackin-config" }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
jackin-launch = { version = "0.6.0-dev", path = "../jackin-launch" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
secrecy = "0.10"
portable-pty = "0.9"
sha2 = "0.11"
crossterm = "0.29"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tempfile = "=3.27.0"
toml = "=1.1.2"

[features]
# Exposes `jackin_env::test_support::*` helpers to consumers that enable
# `jackin-env/test-support` from their own test-support feature (mirrors
# the pattern in `jackin-config` and `jackin-runtime`).
test-support = []

[lints]
workspace = true
