# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-env"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Operator-env resolution: op:// references, $VAR expansion, and 1Password CLI integration. Future home of operator_env/."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_env"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
jackin-config = { workspace = true }
jackin-protocol = { workspace = true }
jackin-diagnostics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }
portable-pty = { workspace = true }
sha2 = { workspace = true }
crossterm = { workspace = true }
chrono = { workspace = true, features = ["clock"] }

[dev-dependencies]
tempfile = { workspace = true }
toml = { workspace = true }

[features]
# Exposes `jackin_env::test_support::*` helpers to consumers that enable
# `jackin-env/test-support` from their own test-support feature (mirrors
# the pattern in `jackin-config` and `jackin-runtime`).
test-support = []

[lints]
workspace = true
