# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-host"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Host OS integration for jackin: desktop, clipboard, caffeinate/keep-awake. L2 infrastructure."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_host"
path = "src/lib.rs"

[dependencies]
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
jackin-docker = { version = "0.6.0-dev", path = "../jackin-docker" }
jackin-protocol = { version = "0.6.0-dev", path = "../jackin-protocol" }
jackin-tui = { version = "0.6.0-dev", path = "../jackin-tui" }
anyhow = "1.0"
fs2 = "0.4"
tokio = { version = "1", features = ["rt", "macros", "fs", "io-util", "sync"] }
url = "2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
