# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-host"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Host OS integration for jackin: desktop, clipboard, caffeinate/keep-awake. L2 infrastructure."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_host"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-docker = { workspace = true }
jackin-protocol = { workspace = true }
jackin-tui = { workspace = true }
jackin-process = { workspace = true }
jackin-telemetry = { workspace = true }
anyhow = { workspace = true }
fs4 = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "fs", "io-util", "sync"] }
url = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
jackin-test-support = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
