# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-image"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Image generation and binary artifact management for jackin❯."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true
[lib]
name = "jackin_image"
path = "src/lib.rs"

[dependencies]
jackin-core = { workspace = true }
jackin-manifest = { workspace = true }
jackin-docker = { workspace = true }
jackin-diagnostics = { workspace = true }
nix = { workspace = true, features = ["user"] }
hex = { workspace = true }
sha2 = { workspace = true }
tar = "0.4"
flate2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "process", "io-util", "sync", "macros", "time", "fs"] }
reqwest = { workspace = true }
# Sigstore Rust client for cosign bundle verification of capsule-manifest.json.
# Pre-1.0 (0.14.x) but the only canonical option for in-process keyless bundle
# verification without a `cosign` system dep. Alternatives evaluated: shell out
# to `cosign` CLI (requires system install), GitHub Attestations API via `gh`
# (requires `gh` on PATH). Selected for hermetic operation with no system dep.
sigstore = { version = "0.14", default-features = false, features = ["cosign"] }
base64 = { workspace = true }
x509-cert = { workspace = true, features = ["pem"] }

[build-dependencies]
jackin-build-meta = { workspace = true }

[dev-dependencies]
filetime = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
