# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-instance"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Instance identity, manifest/index persistence, auth-state provisioning, and container naming for jackin❯ role containers."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_instance"
path = "src/lib.rs"

[dependencies]
jackin-core        = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-config      = { version = "0.6.0-dev", path = "../jackin-config" }
jackin-manifest    = { version = "0.6.0-dev", path = "../jackin-manifest" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }

tracing      = "0.1"
anyhow       = "1.0"
serde        = { version = "1.0", features = ["derive"] }
serde_json   = "1.0"
rand         = "0.10"
chrono       = { version = "0.4", default-features = false, features = ["clock"] }
sha2         = "0.11"
hex          = "0.4"
fs2          = "0.4"
serde_yaml_ng = "0.10.0"
directories  = "6.0"
tempfile     = "3.20"

[features]
test-support = []

[lints]
workspace = true
