# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-instance"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Instance identity, manifest/index persistence, auth-state provisioning, and container naming for jackin❯ role containers."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_instance"
path = "src/lib.rs"

[dependencies]
jackin-core        = { workspace = true }
jackin-config      = { workspace = true }
jackin-manifest    = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-process     = { workspace = true }

anyhow       = { workspace = true }
thiserror    = { workspace = true }
serde        = { workspace = true, features = ["derive"] }
serde_json   = { workspace = true }
rand         = { workspace = true }
chrono       = { workspace = true, features = ["clock"] }
sha2         = { workspace = true }
hex          = { workspace = true }
fs4          = { workspace = true }
serde_yaml_ng = { workspace = true }
directories  = { workspace = true }
tempfile     = { workspace = true }

[features]
test-support = []

[lints]
workspace = true
