[package]
name = "jackin-isolation"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Mount isolation subsystem: shared/worktree/clone materialization, cleanup, branch naming, and state persistence."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_isolation"
path = "src/lib.rs"

[dependencies]
jackin-core        = { workspace = true }
jackin-config      = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-protocol    = { workspace = true }
jackin-docker      = { workspace = true }

anyhow    = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile  = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
jackin-runtime = { workspace = true, features = ["test-support"] }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[features]
test-support = []

[lints]
workspace = true
