# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-isolation"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Mount isolation subsystem: shared/worktree/clone materialization, cleanup, branch naming, and state persistence."
license.workspace = true
readme = "README.md"
publish = false

repository.workspace = true

[lib]
name = "jackin_isolation"
path = "src/lib.rs"

[dependencies]
jackin-core        = { workspace = true }
jackin-config      = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-protocol    = { workspace = true }
jackin-docker      = { workspace = true }
jackin-process     = { workspace = true }

anyhow    = { workspace = true }
thiserror = { workspace = true }
serde     = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile  = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
jackin-test-support = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }

[features]
test-support = []

[lints]
workspace = true
