[package]
name = "jackin-launch-tui"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = "1.0"
crossterm = "0.29"
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
jackin-diagnostics = { version = "0.6.0-dev", path = "../jackin-diagnostics" }
jackin-tui = { version = "0.6.0-dev", path = "../jackin-tui" }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt", "time"] }
tokio-util = "0.7"

[lints]
workspace = true
