[package]
name = "jackin-launch-tui"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
jackin-core = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-tui = { workspace = true }
ratatui = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util = { workspace = true }

[lints]
workspace = true

[build-dependencies]
jackin-build-meta = { workspace = true }
