[package]
name = "jackin-launch"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = "1.0"
crossterm = "0.29"
jackin-diagnostics = { path = "../jackin-diagnostics" }
jackin-protocol = { path = "../jackin-protocol" }
jackin-tui = { path = "../jackin-tui" }
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt", "time"] }

[lints]
workspace = true
