# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-launch"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true
[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
jackin-core = { workspace = true }
jackin-ui = { workspace = true }
jackin-diagnostics = { workspace = true }
owo-colors = { workspace = true }
ratatui = { workspace = true }
termrock = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
tokio-util = { workspace = true }

[lints]
workspace = true

[build-dependencies]
jackin-build-meta = { workspace = true }
