[package]
name = "jackin_lints"
version = "0.1.0"
authors = ["jackin❯ contributors"]
description = "jackin❯ project dylint lints (render-thread purity first)"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dylint_linting = "6.0.1"

[dev-dependencies]
dylint_testing = "6.0.1"

[package.metadata.rust-analyzer]
rustc_private = true

[workspace]
