[package]
name = "jackin-oppicker"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
publish = false

license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
jackin-core = { workspace = true }
jackin-diagnostics = { workspace = true }
jackin-tui = { workspace = true }
termrock = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync"] }

[lints]
workspace = true
