# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-otlp-testbed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Test-only in-process OTLP/gRPC receiver for jackin conformance tests."
publish = false

[dependencies]
opentelemetry-proto.workspace = true
tokio = { workspace = true, features = ["rt", "sync", "net", "macros", "time"] }
tonic.workspace = true

[lints]
workspace = true
