[package]
name = "jackin-protocol"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Shared wire-format types for jackin's host CLI ↔ in-container multiplexer control channel."
homepage = "https://jackin.tailrocks.com/"
repository.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lib]
name = "jackin_protocol"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints]
workspace = true
