# SPDX-FileCopyrightText: 2026 Alexey Zhokhov
# SPDX-License-Identifier: Apache-2.0

[package]
name = "jackin-protocol"
version = "0.6.0-dev"
edition.workspace = true
rust-version.workspace = true
authors = ["Alexey Zhokhov <alexey@zhokhov.com>"]
description = "Shared wire-format types for jackin❯'s host CLI ↔ in-container multiplexer control channel."
homepage = "https://jackin.tailrocks.com/"
repository.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[lib]
name = "jackin_protocol"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
jackin-core = { version = "0.6.0-dev", path = "../jackin-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "net", "rt", "time"] }

[lints]
workspace = true
